# docs/swagger.json
@@ -292,11 +292,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "JWT token",
-                        "schema": {
-                            "type": "string"
-                        }
+                    "204": {
+                        "description": "No content"
                     },
                     "400": {
                         "description": "Bad request",
